# slack-processor

./: .gitignore  README.md  doover_config.json  pyproject.toml
src/slack_processor/: __init__.py  app_config.py  application.py
tests/: test_imports.py
